force-app/main/default/objects/sugati__Availability__c/sugati__Availability__c.object-meta.xml
<CustomObject>
    <label>Availability</label>
    <nameField>
        <displayFormat>Av-{00000000}</displayFormat>
        <label>Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>