force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Activity_Delivery__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Activity_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which activity is being used?</description>
    <inlineHelpText>Which activity is being used?</inlineHelpText>
    <label>Activity Delivery</label>
    <referenceTo>sugati__Activity_Delivery__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>