force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Booked_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Booked_Capacity__c</fullName>
    <formula>TEXT(sugati__S_A_Booked_Spaces__c) + &quot; / &quot; +  TEXT(sugati__S_A_Capacity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked / Capacity</label>
    <type>Text</type>
</CustomField>