force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Booked_Spaces__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Booked_Spaces__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Booked Spaces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>