force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Budgeted_Sell__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Budgeted_Sell__c</fullName>
    <label>Budgeted Sell</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>