force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Calendar_Label__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Calendar_Label__c</fullName>
    <formula>IF (!ISBLANK(sugati__S_A_Activity_Name__c), sugati__S_A_Activity_Name__c + &quot; (&quot; + sugati__S_A_Supplier_Name__c + &quot;)&quot;, sugati__S_A_Supplier_Name__c) + &quot; : &quot; + sugati__S_A_Booked_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Label</label>
    <type>Text</type>
</CustomField>