force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Capacity__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Capacity__c</fullName>
    <description>The activity capacity</description>
    <inlineHelpText>The activity capacity</inlineHelpText>
    <label>Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>