force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Contract__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>sugati__Supplier_Contract__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>