force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Date__c</fullName>
    <description>The date of the availability</description>
    <inlineHelpText>The date of the availability</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>