force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Is_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Is_Start_Date__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Can a booking start on this day?</description>
    <inlineHelpText>Can a booking start on this day?</inlineHelpText>
    <label>Is Start Date</label>
    <type>Checkbox</type>
</CustomField>