force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Managed_Inventory__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Managed_Inventory__c</fullName>
    <formula>sugati__S_A_Resource_Unit__r.sugati__S_RU_Managed_Inventory__c</formula>
    <label>Managed Inventory</label>
    <type>Checkbox</type>
</CustomField>