force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Remaining__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Remaining__c</fullName>
    <formula>sugati__S_A_Capacity__c - sugati__S_A_Booked_Spaces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>