force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Reserved_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Reserved_Supplier_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populates with the supplier booking that has reserved this place before specific rooms are allocated to group members for display in trip planner.</description>
    <label>Reserved Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Availabilities (Reservations)</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>