force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Resource_Unit__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Resource_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies which Resource Unit we are managing</description>
    <inlineHelpText>Identifies which Resource Unit we are managing</inlineHelpText>
    <label>Resource Unit</label>
    <referenceTo>sugati__Resource_Unit__c</referenceTo>
    <relationshipLabel>Availabilities</relationshipLabel>
    <relationshipName>Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>