force-app/main/default/objects/sugati__Availability__c/fields/sugati__S_A_Status__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_A_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Sold Out</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Stop Sale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>